<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5C3B27"
    android:backgroundTint="#5C3B27"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogoMain"
        android:layout_width="100dp"
        android:layout_height="84dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <SearchView
        android:id="@+id/searchBox"
        android:layout_width="215dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:queryHint="@string/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgLogoMain"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnCategories"
        android:layout_width="314dp"
        android:layout_height="111dp"
        android:contentDescription="@string/categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="462dp" />

    <ImageButton
        android:id="@+id/imgBtnFavorites"
        android:layout_width="320dp"
        android:layout_height="116dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/favorites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnCategories"
        app:layout_constraintVertical_bias="0.227"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ScrollView
        android:layout_width="276dp"
        android:layout_height="294dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/highLights"
        app:layout_constraintBottom_toTopOf="@+id/imgBtnCategories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBox"
        app:layout_constraintVertical_bias="0.127">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@tools:sample/avatars" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>